--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "JATE",
+  "name": "jate",
   "version": "1.0.0",
-  "description": "",
+  "description": "A web-based text editor that allows you to make entries even when you are offline",
   "main": "server.js",
   "scripts": {
-    "start:dev": "",
-    "start": "",
-    "server": "",
-    "build": "",
-    "install": "",
-    "client": ""
+    "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
+    "start": "npm run build && cd server && node server.js",
+    "server": "cd server nodemon server.js --ignore client",
+    "build": "cd client && npm run build",
+    "install": "cd client && npm install",
+    "client": "cd client && npm start"
   },
   "keywords": [],
   "author": "",
@@ -21,5 +21,13 @@
   "devDependencies": {
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tonypoku-ghub/iso-text-editor.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tonypoku-ghub/iso-text-editor/issues"
+  },
+  "homepage": "https://github.com/tonypoku-ghub/iso-text-editor#readme"
 }
